Bug 115345 - Impress slide with notes has wrong dimensions and orientation
Summary: Impress slide with notes has wrong dimensions and orientation
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.3.0.3 release
Hardware: All All
: medium normal
Assignee: Vasily Melenchuk (CIB)
URL:
Whiteboard: target:6.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2018-01-31 19:29 UTC by Vasily Melenchuk (CIB)
Modified: 2018-02-22 12:04 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Vasily Melenchuk (CIB) 2018-01-31 19:29:22 UTC
Description:
Notes view page properties are displaying A4 portrait-oriented page, but in properties Format = "User" and orientation = landscape

Steps to Reproduce:
1. Create new Impress presentation
2. Select "Alizarin" template (important, not all templates are affected)
3. Switch view to "Notes" (Menu "View" -> "Notes")

Actual Results:  
See properties toolbar. There is Format=User and Orientation=Landscape. Switching of orientation to portrait and back does not have any visual effect.

Expected Results:
In properties toolbar should be Format=A4 and Orientation=Portrait.


Reproducible: Always


User Profile Reset: No



Additional Info:
Here is described just one of several related bugs. Same problem is visible during printing preview of Notes, or in Slide->Slide properties : in dialog we have width=8.27", height=11.69", orientation=landscape and portrait oriented page in the preview.

Debug shows, that in "Alizarin" template and some others there are controversial(?) values for style:print-orientation="landscape" and meanwhile fo:page-width < fo:page-height. Once I've fix manually "Alizarin" template (just set style:print-orientation="portrait" for corresponding Notes style) problem disappears: with same test scenario I see expected results. However this is not a solution to interpret already existing presentations.




User-Agent: Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/63.0.3239.132 Safari/537.36
Comment 1 Commit Notification 2018-02-15 13:05:09 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3462a55f0696ae06ea6714723c54eb7c67c2cbaa

tdf#115345: removed slide orientation setting method.

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.