tdf#115345: removed slide orientation setting method.

Slide orientation is dependent value and can be easily calculated
based on slide dimensions.

Also modification of slide orientation without changing of page
dimensions brings page in inconsistent state.

Reviewed-on: https://gerrit.libreoffice.org/49334
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>

 Conflicts:
	sd/source/core/sdpage.cxx
	sd/source/core/sdpage2.cxx

Change-Id: I86921668b648a8110d16b31507f2ce5d6c88484a